@@ -1,5 +1,11 @@
 2008-08-13  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/commands/bot.py, jhbuild/config.py: jhbuild bot --start
+	command, to start a slave buildbot; and jhbuild bot --step command
+	to execute buildbot steps.
+
+2008-08-13  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/utils/trayicon.py, tests/mock.py: updated for new check
 	options, and workaround zenity failing with fake stdin/stdout.
 
